Don't reset the deadline in DelegatedFrameHost if size hasn't changed

We should only reset the deadline when ui is resizing because OS is
guttering us anyways. In other cases use the real deadline.

Bug: 834449, 672962
Change-Id: I95a29e3cf8a508d0d1cd614df79c0e12183f1487
Reviewed-on: https://chromium-review.googlesource.com/1048206
Reviewed-by: Fady Samuel <fsamuel@chromium.org>
Commit-Queue: Saman Sami <samans@chromium.org>
Cr-Commit-Position: refs/heads/master@{#556600}
Former-commit-id: 52e45765d50a03b7833097e09446e287e26c94c1