content/browser/renderer_host/delegated_frame_host.cc
@@ -245,8 +245,6 @@ void DelegatedFrameHost::SynchronizeVisualProperties(
 
   if (!primary_surface_id ||
       primary_surface_id->local_surface_id() != pending_local_surface_id_) {
-    current_frame_size_in_dip_ = pending_surface_dip_size_;
-
     viz::SurfaceId surface_id(frame_sink_id_, pending_local_surface_id_);
 #if defined(OS_WIN) || defined(USE_X11)
     // On Windows and Linux, we would like to produce new content as soon as
@@ -256,10 +254,13 @@ void DelegatedFrameHost::SynchronizeVisualProperties(
     // using an infinite deadline, in which case we should respect the
     // specified deadline and block UI since that's what was requested.
     if (deadline_policy.policy_type() !=
-        cc::DeadlinePolicy::kUseInfiniteDeadline) {
+            cc::DeadlinePolicy::kUseInfiniteDeadline &&
+        !current_frame_size_in_dip_.IsEmpty() &&
+        current_frame_size_in_dip_ != pending_surface_dip_size_) {
       deadline_policy = cc::DeadlinePolicy::UseSpecifiedDeadline(0u);
     }
 #endif
+    current_frame_size_in_dip_ = pending_surface_dip_size_;
     client_->DelegatedFrameHostGetLayer()->SetShowPrimarySurface(
         surface_id, current_frame_size_in_dip_, GetGutterColor(),
         deadline_policy, false /* stretch_content_to_fill_bounds */);
